<resources>
    <string name="app_name">StudentMeetUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="application_name">StudentMeetUp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search_session">Search Session</string>

    <string name="menu_home">Home</string>
    <string name="menu_show_sessions">Show sessions</string>
    <string name="menu_filter_sessions">Filter sessions</string>
    <string name="menu_manage_sessions">My Sessions</string>
    <string name="menu_search_user">Search User</string>
    <string name="menu_create_session">Create Session</string>
    <string name="login">Login</string>
    <string name="hint_email">Insert Email</string>
    <string name="hint_password">Insert your password</string>
    <string name="register">Register</string>
    <string name="hint_register">If your dont have account you can register here:</string>
    <string name="title_register">Register</string>
    <string name="title_new_session">New Session</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_course">Course</string>
    <string name="hint_description_yourself">Description about yourself</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_title">Title</string>
    <string name="hint_date">Date</string>
    <string name="hint_location">Location</string>
    <string name="hint_description_session">Short description about the session</string>
    <string name="create_session">Create Session</string>
    <string name="join_session">Join Session</string>
    <string name="profile">Profile</string>
    <string name="edit_session">Edit Session</string>
    <string name="delete_session">Delete</string>
    <string name="welcome_message">Welcome!</string>
    <string name="registration">Registration</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="people_joined">People joined</string>
    <string name="session_admin">Administrator</string>
    <string name="leave_session">Leave Session</string>
    <string name="reporting_form">Reporting Form</string>
    <string name="why_reporting">Why you want to report the user?</string>
    <string name="hint_description_report">Write a short description about the report</string>
    <string name="report_user">Report  User</string>
    <string name="hint_search_user">Input the user nickname</string>
    <string name="button_search_user">Search User</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_user_profile">User Profile</string>
    <string name="hint_tag">Session Tag</string>
    <string name="button_search_session">Search</string>
    <string name="session_updated_message">Session updated succesfully</string>
    <string name="session_no_updated_message">Something happend session was not updated</string>
    <string name="no_session_created">No session created</string>
    <string name="user_not_found">User not found</string>
    <string name="tags_empty_message">Tags field empty</string>
    <string name="delete_filter_text">Delete filter: </string>
    <string name="nickname_empty_message">Nickname field empty </string>
    <string name="user_not_found_message">User not found</string>
    <string name="search_user">Search User</string>
    <string name="btn_back">Back</string>
    <string name="report_not_submitted">Something has happend, report was not submitted</string>
    <string name="fill_fields_correctly">Insert email and password please</string>
    <string name="label_date">Date:</string>
    <string name="label_location">Location:</string>
    <string name="label_time">Time:</string>
    <string name="label_description">Description:</string>
    <string name="label_tags">Tags:</string>
    <string name="label_people_joined">Users joined:</string>
    <string name="label_admin">Administrator:</string>
    <string name="session_list">Sessions available</string>
    <string name="sessions_you_created">Sessions you are admin:</string>
    <string name="no_sessions_joined">No sessions Joined</string>
    <string name="sesion_leaved_message">You leaved the session successfully</string>
    <string name="session_deleted_message">Session deleted succesfully</string>
    <string name="no_sessions_available">No sessions available</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="thanks_message">Thank you for helping us make this app better</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="label_email">Email</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="current_password">Input current password</string>


    <string-array name="reporting_reasons">
        <item>abusive</item>
        <item>spamming_bot</item>
        <item>other</item>
    </string-array>

    <string-array name="courses_array">
        <item>IT</item>
        <item>Business</item>
    </string-array>
    <string name="label_event">Sessions Host</string>
    <string name="label_event_joined">Sessions Joined</string>
    <string name="sessions_your_in">Sessions you are in:</string>
    <string name="shared_preferences_file_key">com.example.studentmeetup.prefs</string>
    <string name="saved_username_key">com.example.studentmeetup.username</string>
    <string name="saved_password_key">com.example.studentmeetup.password</string>
    <string name="is_logged_in_key">com.example.studentmeetup.loggedin</string>

</resources>
